--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "roboapp",
+  "homepage": "https://gauravLFC.github.io/robofriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "eslint": "^6.1.0",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-redux": "^7.1.1",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
